--- a/css/style.css
+++ b/css/style.css
@@ -536,7 +536,7 @@ article .panel .button {
   display: inline-block;
   padding: 0.5rem 1.4rem;
   font-size: 0.8rem;
-  border-color: #d8d8d8;
+  border-color: #ededed;
   color: #FFFFFF;
   text-transform: uppercase;
   transition: background-color 300ms ease-out; }
@@ -560,9 +560,21 @@ article .panel .button {
   background: #da0513;
   border-color: #f50625; }
 
+.call-to-action .button.small {
+  text-transform: uppercase;
+  font-size: 0.7rem; }
+
+.main-column .call-to-action .button.small {
+  background: #921914;
+  top: -20px;
+  margin-left: 20px; }
+
+.main-column .call-to-action .button.small:hover {
+  background: #319865; }
+
 /* MAIN COLUMN */
 .main-column {
-  padding-left: 0px; }
+  padding: 0px; }
 
 /* POST ITEM */
 article button:hover,
@@ -576,7 +588,14 @@ article .panel .button:focus,
 article.post-item .post-item-title {
   font-family: "Montserrat", Helvetica, sans-serif, Helvetica, Roboto, Arial, sans-serif;
   text-transform: uppercase;
-  line-height: 1.3rem; }
+  line-height: 1.3rem;
+  font-weight: 300; }
+
+article.post-item .post-item-title a {
+  color: #921914; }
+
+article.post-item .post-item-title a:hover {
+  color: #319865; }
 
 article .post-item-date {
   color: #FFF;
@@ -608,51 +627,57 @@ article .panel {
 
 /* CATEGORY ITEM */
 .main-row {
-  padding: 0px;
+  padding: 5px 15px;
   margin-top: 20px; }
 
 .category-row {
-  margin-bottom: 30px; }
+  /* margin-bottom: 30px;*/ }
 
 .category-row .post-list {
-  margin-top: 30px;
-  margin-bottom: 20px; }
+  /*
+  margin-top:30px;
+  margin-bottom:20px;
+  */ }
 
 .category-row .category-header {
   margin-bottom: 10px; }
 
 .category-title {
   font-family: "Montserrat", Helvetica, sans-serif;
-  color: #319865;
+  color: #921914;
   text-transform: uppercase;
   padding: 0px;
-  text-align: center; }
+  font-weight: 300; }
 
 .category-title-line {
-  background: #319865;
-  height: 1px; }
+  background: #921914;
+  height: 1px;
+  margin-top: 1.2em; }
 
 article.columns + article.columns:last-child {
   float: left; }
 
 .category-row article {
   padding-bottom: 0px;
-  margin-bottom: 1.35rem; }
+  max-height: 330px;
+  overflow: hidden;
+  margin-bottom: 1.5rem; }
 
-.category-row article .panel {
-  border: none;
-  margin-bottom: 0;
-  padding: 0.9rem;
-  padding-bottom: 0px;
-  padding-top: 0.2rem;
-  background: none; }
+.main-row .category-row article {
+  margin-bottom: 0; }
 
 .category-row .post-item-caption {
-  height: 100%;
-  background: #f2f2f2;
-  webkit-box-shadow: 0px 0px 2px 1px #c9c9c9;
-  -moz-box-shadow: 0px 0px 2px 1px #c9c9c9;
-  box-shadow: 0px 0px 2px 1px #c9c9c9; }
+  border: none;
+  margin-bottom: 0;
+  padding: 5px; }
+
+.category-row .post-item-caption .panel {
+  border: none;
+  margin-bottom: 0;
+  position: relative;
+  top: -70px;
+  background: #FFF;
+  margin: 15px 10px; }
 
 .category-row article .post-item-image {
   max-height: 180px;
@@ -660,11 +685,9 @@ article.columns + article.columns:last-child {
 
 .category-row article .panel p {
   font-family: inherit;
-  font-size: 1rem;
   font-weight: normal;
   line-height: 1.3;
-  margin-bottom: 0.9rem;
-  text-rendering: optimizeLegibility; }
+  font-size: 0.9rem; }
 
 .category-row .category-link-wrapper {
   display: block; }
@@ -777,7 +800,7 @@ footer a#back-to-top {
 aside .widget {
   max-width: 100%;
   margin-bottom: 15px;
-  border: solid 1px #d8d8d8; }
+  border: solid 1px #ededed; }
 
 aside .widget ul, .widget ol {
   padding: 15px 10px; }
@@ -847,7 +870,7 @@ aside .widget ul li {
   list-style: none;
   padding-bottom: 10px;
   margin-bottom: 5px;
-  border-bottom: dashed 1px #d8d8d8; }
+  border-bottom: dashed 1px #ededed; }
 
 aside .widget ul li:last-child {
   border-bottom: none; }
@@ -1137,7 +1160,18 @@ img.alignright {
 
   footer .copyright {
     font-size: 0.9em;
-    margin-bottom: 10px; } }
+    margin-bottom: 10px; }
+
+  .slider-wrapper {
+    width: 100%;
+    height: 250px;
+    overflow: hidden; }
+
+  .slider-wrapper .panel p, .slider-wrapper .post-item-date, .slider-wrapper .panel .button {
+    display: none; }
+
+  .slider-wrapper .slider-caption .panel .post-item-title {
+    font-size: 0.8em; } }
 @media only screen and (max-width: 40.0625em) {
   section.fixed-header {
     position: relative;
@@ -1214,9 +1248,6 @@ img.alignright {
   .category-row .post-list,
   .archive-row {
     padding: 15px; }
-
-  .main-column {
-    padding-right: 0px; }
 
   .category-row article,
   .sy-controls li a:after {
@@ -1299,6 +1330,42 @@ header {
   position: relative;
   left: 50%; }
 
+/* EVENTS */
+.event-widget .event-item {
+  padding: 15px 5px;
+  border-bottom: solid 1px #ededed; }
+
+.event-widget .event-item:last-of-type {
+  border-bottom: 0px; }
+
+.event-widget .day, .event-widget .full-day, .event-widget .month {
+  font-family: "Montserrat", Helvetica, sans-serif;
+  line-height: 0.6em; }
+
+.event-widget .day {
+  font-weight: bold;
+  color: #319865;
+  line-height: 0.8;
+  letter-spacing: -3px; }
+
+.event-widget .month {
+  color: #c9c9c9; }
+
+.event-widget .full-day {
+  color: #319865;
+  font-weight: 300; }
+
+.event-widget p.description {
+  margin-bottom: 0; }
+
+.event-widget .description a {
+  font-size: 0.9em;
+  font-weight: 300;
+  color: #020d16; }
+
+.event-widget .description a:hover {
+  color: #921914; }
+
 /* MISCELLANEOUS */
 figure {
   margin: 0;
@@ -1308,5 +1375,14 @@ figure {
 
 article.comment-wrapper {
   margin-top: 20px; }
+
+.no-padding-right {
+  padding-right: 0; }
+
+.no-padding-left {
+  padding-left: 0; }
+
+.no-padding {
+  padding: 0; }
 
 /*# sourceMappingURL=style.css.map */
