--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,7 +2,7 @@ $author-image-radius : 60px;
 $icon-font:    'FontAwesome';
 $primary-font:    'Montserrat',Helvetica, sans-serif;
 $shadow-color:#c9c9c9;
-$border-color:#d8d8d8;
+$border-color:#ededed;
 
 @font-face {
     font-family: 'Montserrat';
@@ -663,10 +663,22 @@ article .panel .button {
     border-color: #f50625;
 }
 
+.call-to-action .button.small{
+    text-transform: uppercase;
+    font-size: 0.7rem;
+}
+.main-column .call-to-action .button.small {
+    background: $secondary-color;
+    top:-20px;
+    margin-left:20px;
+}
+.main-column .call-to-action .button.small:hover {
+    background: $primary-color;
+}
 /* MAIN COLUMN */
 
 .main-column {
-    padding-left: 0px;
+    padding:0px;
 }
 
 
@@ -685,7 +697,11 @@ article.post-item .post-item-title {
     font-family: $primary-font, Helvetica, Roboto, Arial, sans-serif;
     text-transform: uppercase;
     line-height: 1.3rem;
+    font-weight: 300;
 }
+
+article.post-item .post-item-title a {color:$secondary-color;}
+article.post-item .post-item-title a:hover {color:$primary-color;}
 
 article .post-item-date {
     color: $light-color;
@@ -720,16 +736,18 @@ article .panel {
 /* CATEGORY ITEM */
 
 .main-row {
-    padding: 0px;
-    margin-top: 20px;
+    padding: 5px 15px;
+    margin-top:20px;
 }
 
 .category-row {
-    margin-bottom: 30px;
+    /* margin-bottom: 30px;*/
 }
 .category-row .post-list {
+    /*
     margin-top:30px;
     margin-bottom:20px;
+    */
 }
 
 .category-row .category-header {
@@ -738,14 +756,15 @@ article .panel {
 
 .category-title {
     font-family: $primary-font;
-    color: $link-color;
+    color: $secondary-color;;
     text-transform: uppercase;
     padding: 0px;
-    text-align: center;
+    font-weight: 300;
 }
 .category-title-line {
-    background: $link-color;
+    background: $secondary-color;
     height: 1px;
+    margin-top: 1.2em;
 }
 
 
@@ -755,25 +774,31 @@ article.columns + article.columns:last-child {
 }
 .category-row article {
     padding-bottom: 0px;
-    margin-bottom: 1.35rem;
+    max-height: 330px;
+    overflow: hidden;
+    margin-bottom: 1.5rem;
+}
+.main-row .category-row article {
+    margin-bottom: 0;
+    
 }
 
-.category-row article .panel {
+.category-row .post-item-caption{
     border: none;
     margin-bottom: 0;
-    padding: 0.9rem;
-    padding-bottom: 0px;
-    padding-top: 0.2rem;
-    background: none;
+    padding:5px;
 }
 
-.category-row .post-item-caption {
-    height: 100%;
-    background: #f2f2f2;
-    webkit-box-shadow: 0px 0px 2px 1px $shadow-color;
-    -moz-box-shadow: 0px 0px 2px 1px $shadow-color;
-    box-shadow: 0px 0px 2px 1px $shadow-color;
+.category-row .post-item-caption .panel {
+    border: none;
+    margin-bottom: 0;
+    position:relative;
+    top:-70px;
+    background: #FFF;
+    margin:15px 10px;
 }
+
+
 
 .category-row article .post-item-image{
     max-height:180px;
@@ -781,11 +806,10 @@ article.columns + article.columns:last-child {
 }
 .category-row article .panel p {
     font-family: inherit;
-    font-size: 1rem;
     font-weight: normal;
     line-height: 1.3;
-    margin-bottom: 0.9rem;
-    text-rendering: optimizeLegibility;
+    font-size: 0.9rem;
+
 }
 
 .category-row .category-link-wrapper {
@@ -921,7 +945,9 @@ footer a#back-to-top {
 
 /* SIDEBAR */
 
-
+#sidebar.columns {
+    
+}
 aside .widget {
     max-width: 100%;
     margin-bottom: 15px;
@@ -1351,7 +1377,20 @@ img.alignright {
     footer .copyright {
     font-size: 0.9em;
     margin-bottom: 10px;
-}
+    }
+    .slider-wrapper {
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+    }
+    
+    .slider-wrapper .panel p, .slider-wrapper .post-item-date, .slider-wrapper .panel .button{
+        display: none;
+    }
+    
+    .slider-wrapper .slider-caption .panel .post-item-title {
+        font-size: 0.8em;
+    }
 }
 @media only screen and (max-width: 40.0625em) {
     section.fixed-header {
@@ -1433,9 +1472,7 @@ img.alignright {
     .archive-row {
         padding: 15px;
     }
-    .main-column {
-        padding-right: 0px;
-    }
+
     .category-row article,
     .sy-controls li a:after {
         top: 50%;
@@ -1520,6 +1557,26 @@ header {
     position:relative;
     left:50%;
 }
+
+/* EVENTS */
+.event-widget .event-item {
+    padding:15px 5px;
+    border-bottom: solid 1px $border-color;
+}
+.event-widget .event-item:last-of-type{
+    border-bottom: 0px;
+}
+.event-widget .day, .event-widget .full-day, .event-widget .month{
+    font-family: $primary-font; 
+    line-height: 0.6em;
+}
+.event-widget .day{font-weight: bold;color:$primary-color;line-height: 0.8;letter-spacing: -3px;}
+.event-widget .month{color:$shadow-color;}
+.event-widget .full-day{color:$primary-color;font-weight: 300; }
+.event-widget p.description { margin-bottom: 0;}
+.event-widget .description a{ font-size: 0.9em; font-weight: 300; color:$dark-color;}
+.event-widget .description a:hover{color:$secondary-color;}
+
 /* MISCELLANEOUS */
 figure {
     margin:0;
@@ -1529,4 +1586,13 @@ figure {
 }
 article.comment-wrapper {
     margin-top: 20px;
+}
+.no-padding-right {
+    padding-right:0;
+}
+.no-padding-left {
+    padding-left:0;
+}
+.no-padding {
+    padding:0;
 }
