--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -3,6 +3,7 @@ $icon-font:    'FontAwesome';
 $primary-font:    'Montserrat',Helvetica, sans-serif;
 $shadow-color:#c9c9c9;
 $border-color:#ededed;
+$gray-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
 
 @font-face {
     font-family: 'Montserrat';
@@ -109,15 +110,23 @@ header div.logo img {
     */
 }
 
+.single-cover .overlay{
+    background: rgba($primary-color,0.85);
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+}
 .single-cover .title.center{
         text-align: center;
         text-transform: uppercase;
         font-family: $primary-font;   
-        padding-top: 1.2em;
+        padding: 1.4em 0px;
         display: block;
-    
+        font-weight: 300;
         text-transform: uppercase;
-        color: #1c6eae;
+        color: $light-color;
+    
     }
 
 /* NAVIGATION */
@@ -619,9 +628,6 @@ button:hover, button:focus, .button:hover, .button:focus {
     background-color: $secondary-color;
 }
 
-ul.pagination li.current a:hover, ul.pagination li.current a:focus, ul.pagination li.current button:hover, ul.pagination li.current button:focus {
-    background: $dark-color;
-}
 article .panel .button {
     border-radius: 5px;
     border-style: solid;
@@ -669,7 +675,7 @@ article .panel .button {
 }
 .main-column .call-to-action .button.small {
     background: $secondary-color;
-    top:-20px;
+    top:-40px;
     margin-left:20px;
 }
 .main-column .call-to-action .button.small:hover {
@@ -680,7 +686,9 @@ article .panel .button {
 .main-column {
     padding:0px;
 }
-
+.single-row .main-column {
+    padding-left:15px;
+}
 
 /* POST ITEM */
 
@@ -703,17 +711,6 @@ article.post-item .post-item-title {
 article.post-item .post-item-title a {color:$secondary-color;}
 article.post-item .post-item-title a:hover {color:$primary-color;}
 
-article .post-item-date {
-    color: $light-color;
-    text-align: center;
-    font-size: 0.8rem;
-    position:absolute;
-    top:40px;
-    right:15px;
-    background: $primary-color;
-    text-transform: uppercase;
-    padding: 5px;
-}
 article .post-item-date span {
     display: block;
 }
@@ -774,9 +771,7 @@ article.columns + article.columns:last-child {
 }
 .category-row article {
     padding-bottom: 0px;
-    max-height: 330px;
-    overflow: hidden;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 .main-row .category-row article {
     margin-bottom: 0;
@@ -793,9 +788,8 @@ article.columns + article.columns:last-child {
     border: none;
     margin-bottom: 0;
     position:relative;
-    top:-70px;
     background: #FFF;
-    margin:15px 10px;
+    margin:10px 10px 0px 10px;
 }
 
 
@@ -803,6 +797,7 @@ article.columns + article.columns:last-child {
 .category-row article .post-item-image{
     max-height:180px;
     overflow: hidden;
+    margin-bottom:-70px;
 }
 .category-row article .panel p {
     font-family: inherit;
@@ -951,7 +946,8 @@ footer a#back-to-top {
 aside .widget {
     max-width: 100%;
     margin-bottom: 15px;
-    border:solid 1px $border-color;
+    -webkit-box-shadow: $gray-shadow;
+    box-shadow: $gray-shadow;
 }
 aside .widget ul, .widget ol{
     padding:15px 10px;
@@ -1080,6 +1076,7 @@ aside .recent-posts-box ul li a {
 
 .single-row {
     padding: 0px;
+    margin-bottom:30px;
 }
 
 .single-row article .panel {
@@ -1133,9 +1130,8 @@ aside .recent-posts-box ul li a {
     /* padding-top:50px; */
     text-align: justify;
     
-    -webkit-box-shadow: 0px 0px 2px 1px $shadow-color;
-    -moz-box-shadow: 0px 0px 2px 1px $shadow-color;
-    box-shadow: 0px 0px 2px 1px $shadow-color;
+    -webkit-box-shadow: $gray-shadow;
+    box-shadow: $gray-shadow;
 }
 .single-row article .post-item-image{
     position:relative;
@@ -1197,21 +1193,14 @@ aside .recent-posts-box ul li a {
 .single-row article .category-title-line{
     height:2px;
 }
-.single-row article .post-item-date {
-    color: $light-color;
+article .post-item-date {
+    color:gray;
     text-align: center;
-    font-size: 0.8rem;
-    position: absolute;
-    top: 80px;
-    right: -5px;
-    background: $primary-color;
+    font-size: 0.7rem;
     text-transform: uppercase;
-    padding: 5px;
-    padding-left:10px;
-    webkit-box-shadow: 0px 0px 2px 1px $primary-color;
-    -moz-box-shadow: 0px 0px 2px 1px $primary-color;
-    box-shadow: 0px 0px 2px 1px $primary-color;
+    padding: 5px 0px;
 }
+
 .single-row article.post-item blockquote p {
     margin: 7px 0
 }
@@ -1274,7 +1263,7 @@ aside .recent-posts-box ul li a {
     list-style: none;
     margin-left: 0;
     overflow: hidden;
-    padding: 0.5625rem 0.875rem 0.5625rem;
+    padding: 0.6em 1.3rem;
     background-color: transparent;
     border: none;
 }
@@ -1308,14 +1297,6 @@ aside .recent-posts-box ul li a {
     text-align: left;
 }
 
-ul.pagination li.current a,
-ul.pagination li.current button {
-    background: $link-color;
-}
-ul.pagination li a, ul.pagination li{
-    font-size: 1em;
-    font-family: $primary-font;
-}
 
 /* TABLES */
 
@@ -1546,35 +1527,69 @@ header {
     100% { opacity:1; }
 }
 /* PAGINATION */
-.pagination-wrapper{
-    float:right;
-    position:relative;
-    left:-50%;
-    text-align:left;
+
+.nav-links div{
+    display: inline;
 }
-.pagination-wrapper .pagination{
-    list-style:none;
-    position:relative;
-    left:50%;
+.nav-links .nav-next{
+    float:right;
+}
+.nav-links .nav-prev{
+    float:left;
+}
+
+.page-numbers, .nav-links div {
+    font-family: $primary-font;
+	display: inline-block;
+	padding: 5px 10px;
+	margin: 0 2px 0 0;
+	border: 1px solid $link-color;
+	line-height: 1;
+	text-decoration: none;
+	border-radius: 2px;
+	font-weight: 600;
+    font-size: 1em;
+}
+.page-numbers.current,
+a.page-numbers:hover {
+	background: $link-color;
+	color: $light-color;
+}
+span.page-numbers.dots {
+    color: $link-color;
+}
+.pagination-wrapper {margin:15px 0px;}
+ul.pagination li.current a,
+ul.pagination li.current button {
+    background: $link-color;
+}
+ul.pagination li a, ul.pagination li{
+    font-size: 1em;
+    font-family: $primary-font;
+}
+
+ul.pagination li.current a:hover, ul.pagination li.current a:focus, ul.pagination li.current button:hover, ul.pagination li.current button:focus {
+    background: $dark-color;
 }
 
 /* EVENTS */
 .event-widget .event-item {
-    padding:15px 5px;
+    padding:12px 5px;
     border-bottom: solid 1px $border-color;
 }
 .event-widget .event-item:last-of-type{
     border-bottom: 0px;
 }
 .event-widget .day, .event-widget .full-day, .event-widget .month{
+    text-transform: capitalize;
     font-family: $primary-font; 
     line-height: 0.6em;
 }
-.event-widget .day{font-weight: bold;color:$primary-color;line-height: 0.8;letter-spacing: -3px;}
+.event-widget .day{color:$primary-color;line-height: 0.8;letter-spacing: -4px;text-align: center;}
 .event-widget .month{color:$shadow-color;}
 .event-widget .full-day{color:$primary-color;font-weight: 300; }
 .event-widget p.description { margin-bottom: 0;}
-.event-widget .description a{ font-size: 0.9em; font-weight: 300; color:$dark-color;}
+.event-widget .description a{ font-size: 0.85em; font-weight: 300; color:$dark-color;}
 .event-widget .description a:hover{color:$secondary-color;}
 
 /* MISCELLANEOUS */
