--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ body {
   box-shadow: 0px 3px 20px 0px rgba(0, 0, 0, 0.1);
   max-width: 1100px;
   width: 100%;
-  margin-top: 15px;
   margin-bottom: 40px; }
 
 /* TYPOGRPAHY */
@@ -55,7 +54,7 @@ section.fixed-header {
   /* position:fixed;*/
   z-index: 100;
   width: 100%;
-  padding: 30px 20px 15px 20px; }
+  padding: 25px 20px 15px 20px; }
 
 header div.logo {
   padding: 0px;
@@ -97,7 +96,7 @@ header div.logo img {
   text-align: center;
   text-transform: uppercase;
   font-family: "Montserrat", Helvetica, sans-serif;
-  padding: 1.4em 0px;
+  padding: 1.6em 0px;
   display: block;
   font-weight: 300;
   text-transform: uppercase;
@@ -160,7 +159,7 @@ header div.logo img {
 .top-bar .toggle-topbar.menu-icon {
   top: 50%; }
 
-.main-nav li {
+.main-nav > li {
   border-left: 1px solid #f5f5f5;
   -webkit-transition: all .2s;
   -moz-transition: all .2s;
@@ -571,8 +570,8 @@ article .panel .button {
 
 .main-column .call-to-action .button.small {
   background: #921914;
-  top: -40px;
-  margin-left: 20px; }
+  margin-left: 20px;
+  margin-top: 10px; }
 
 .main-column .call-to-action .button.small:hover {
   background: #319865; }
@@ -953,6 +952,7 @@ aside .recent-posts-box ul li a {
   background: #FFF;
   /* padding-top:50px; */
   text-align: justify;
+  margin-bottom: 1.2rem;
   -webkit-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2); }
 
